# seven

./: CMakeLists.txt  build.bat  build_linux.sh  build_win32.bat  generate_vst_ui.bat  generate_vst_ui_debug.bat  generate_vst_ui_release.bat  generate_vst_ui_win32_debug.bat  generate_vst_ui_win32_release.bat  readme.txt  todo.txt
src/include/: plugcontroller.h  plugids.h  plugprocessor.h
src/knobs/: orange.knob
src/resource/: plug.uidesc
src/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
src/svn.base/svn.base/dsp/: audio_processor.cpp  audio_processor.hpp  audio_sample.hpp  automation_buffer.cpp  automation_buffer.hpp  automation_view.hpp  block_input.hpp  block_output.hpp  delay_buffer.hpp  dsp.hpp  fft.cpp  fft.hpp  global_input.hpp  graph_processor.cpp  graph_processor.hpp  input_buffer.hpp  io_types.hpp  note_event.hpp  spectrum_analyzer.cpp  spectrum_analyzer.hpp  support.cpp  support.hpp
src/svn.base/svn.base/runtime/: runtime_param.cpp  runtime_param.hpp  runtime_part.cpp  runtime_part.hpp  runtime_topology.cpp  runtime_topology.hpp
src/svn.base/svn.base/static/: item_name.cpp  item_name.hpp  param_bounds.cpp  param_bounds.hpp  param_descriptor.cpp  param_descriptor.hpp  part_descriptor.cpp  part_descriptor.hpp  real_bounds.hpp
src/svn.base/svn.base/support/: io_stream.cpp  io_stream.hpp  item_name.cpp  item_name.hpp  note_name.cpp  note_name.hpp  param_value.cpp  param_value.hpp  platform.cpp  platform.hpp  support.cpp  support.hpp
src/svn.base/svn.base/topology/: graph_descriptor.hpp  param_descriptor.cpp  param_descriptor.hpp  part_descriptor.hpp  real_bounds.cpp  real_bounds.hpp  runtime_param.cpp  runtime_param.hpp  runtime_part.cpp  runtime_part.hpp  runtime_topology.cpp  runtime_topology.hpp  topology_info.cpp  topology_info.hpp
src/svn.synth/svn.synth/: oscillator.cpp  oscillator.hpp  seven_synth.cpp  seven_synth.hpp  topology.cpp  topology.hpp
src/svn.synth/svn.synth/dsp/: amplitude.cpp  amplitude.hpp  audio_state.cpp  audio_state.hpp  cv_state.cpp  cv_state.hpp  envelope.cpp  envelope.hpp  filter.cpp  filter.hpp  graph_processor.cpp  graph_processor.hpp  lfo.cpp  lfo.hpp  oscillator.cpp  oscillator.hpp  seven_synth.cpp  seven_synth.hpp  support.hpp  synth_voice.cpp  synth_voice.hpp  synthesizer.cpp  synthesizer.hpp  voice.cpp  voice.hpp  voice_amp.cpp  voice_amp.hpp  voice_filter.cpp  voice_filter.hpp  voice_input.hpp  voice_lfo.cpp  voice_lfo.hpp  voice_oscillator.cpp  voice_oscillator.hpp  voice_state.hpp
src/svn.synth/svn.synth/static/: topology.cpp  topology.hpp
src/svn.synth/svn.synth/support/: io_stream.hpp
src/svn.synth/svn.synth/topology/: topology.cpp  topology.hpp
src/svn.vst.base/resources/input/: 0000FF.knob  0080FF.knob  00FF00.knob  00FF80.knob  00FFFF.knob  8000FF.knob  80FF00.knob  FF0000.knob  FF0080.knob  FF00FF.knob  FF8000.knob  FFFF00.knob  green.knob  orange.knob
src/svn.vst.base/svn.vst.base/sdk/: controller.cpp  controller.hpp  editor.cpp  editor.hpp  graph.cpp  graph.hpp  graph_plot.cpp  graph_plot.hpp  parameter.cpp  parameter.hpp  processor.cpp  processor.hpp
src/svn.vst.base/svn.vst.base/support/: bootstrap.cpp  bootstrap.hpp  io_stream.cpp  io_stream.hpp  support.hpp  vst_init.cpp  vst_init.hpp  vst_io_stream.cpp  vst_io_stream.hpp
src/svn.vst.base/svn.vst.base/ui/: editor.cpp  editor.hpp  graph_plot.cpp  graph_plot.hpp  rotary_knob.cpp  rotary_knob.hpp  support.cpp  support.hpp  view_container_fix.cpp  view_container_fix.hpp  view_switch_container_fix.cpp  view_switch_container_fix.hpp
src/svn.vst.synth/resources/: controller.uidesc
src/svn.vst.synth/resources/output/: controller.uidesc  example.uidesc
src/svn.vst.synth/svn.vst.synth/: synth.cpp  synth.hpp  synth.rc
src/svn.vst.synth/svn.vst.synth/sdk/: controller.cpp  controller.hpp  parameter.hpp
src/svn.vst.synth/svn.vst.synth/support/: entry.cpp  ids.hpp  info.hpp  io_stream.hpp
src/svn.vst.ui/svn.vst.ui/: main.cpp
src/svn.vst.ui/svn.vst.ui/description/: support.hpp  ui_description.cpp  ui_description.hpp
src/svn.vst.ui/svn.vst.ui/generator/: generator.cpp  generator.hpp  support.cpp  support.hpp
src/svn.vst.ui/svn.vst.ui/support/: support.cpp  support.hpp
src/svn.vst.ui_generator/svn.vst.ui_generator/: main.cpp  ui_generator.cpp
src/svn.vst.ui_generator/svn.vst.ui_generator/description/: controller_ui_description.cpp  controller_ui_description.hpp  param_ui_description.hpp  part_ui_description.cpp  part_ui_description.hpp  support.hpp  ui_description.cpp  ui_description.hpp
src/svn.vst.ui_generator/svn.vst.ui_generator/generator/: generator.cpp  generator.hpp  support.cpp  support.hpp
src/svn.vst.ui_generator/svn.vst.ui_generator/support/: support.cpp  support.hpp
src/svn.vst.uigen/svn.vst.uigen/: ui_generator.cpp
src/svn/svn/: unit_generator.cpp  unit_generator.hpp
src/svn/svn/automation/: automation_buffer.hpp  automation_data.hpp  automation_param_data.hpp  param_automation_buffer.hpp  unit_automation_buffer.cpp  unit_automation_buffer.hpp
src/svn/svn/dsp/: dsp.hpp  oscillator.hpp  seven_synth.cpp  seven_synth.hpp  shared_dsp.hpp  synth.cpp  synth.hpp  unit.cpp  unit.hpp  unit_generator.cpp  unit_generator.hpp
src/svn/svn/event/: automation_buffer.hpp  unit_automation_buffer.cpp  unit_automation_buffer.hpp
src/svn/svn/param/: param_id.hpp  param_info.hpp  param_range.hpp  synth_param.hpp  synth_params.hpp
src/svn/svn/stream/: audio_buffer.hpp  audio_sample.hpp  event_buffer.hpp  note_buffer.hpp
src/svn/svn/support/: audio.hpp  audio_buffer.hpp  audio_sample.hpp  automation_buffer.hpp  automation_data.hpp  block.hpp  event.hpp  event_buffer.hpp  input_buffer.hpp  io_stream.cpp  io_stream.hpp  param_transform.cpp  param_transform.hpp  param_value.hpp  process_info.hpp  sample.hpp  topo.cpp  topo.hpp  topo_rt.cpp  topo_rt.hpp  topo_static.cpp  topo_static.hpp  topology.cpp  topology.hpp
src/svn/svn/synth/: automation_buffer.hpp  param_state.hpp  process_info.hpp  seven_synth.cpp  seven_synth.hpp  synth_params.hpp  unit_automation_buffer.cpp  unit_automation_buffer.hpp  unit_generator.cpp  (+1 more)
(+45 files in other folders)
